--- a/01_Day_JavaScript_Refresher/package.json
+++ b/01_Day_JavaScript_Refresher/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node bin/www",
+    "start": "node server.js",
     "test": "nodemon server.js",
     "debug": "DEBUG=anpr-app:* npm start"
   },
   "dependencies": {
-    "express": "~4.16.1",
+    "express": "^4.16.4",
     "path": "^0.12.7"
   },
   "devDependencies": {
