--- a/01_Day_JavaScript_Refresher/package.json
+++ b/01_Day_JavaScript_Refresher/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "express": "^4.16.4",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
